<package format="2">
  <name>ADVR_ROS</name>
  <version>1.0.0</version>
  <description>
  This package provides ADVR ROS capability.
  </description>
<maintainer email="giuseppe.rigano@iit.it">IIT</maintainer>
  <license>BSD</license>
  
  <build_depend>message_generation</build_depend>
  
</package>
